# fastapi_learn

./: .env  .env.example  Makefile  docker-compose.yml  pyproject.toml  server.py
.docker/mysql/: Dockerfile  init.sql  my.cnf
alembic/: env.py
alembic/versions/: a0bcab1eddc4_initial_migration.py  f18d0615ac6e_init.py
app/: database.py  main.py  models.py  settings.py
app/api/: main.py
