[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.3",
    "asyncmy>=0.2.9",
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.5.2",
    "rich>=13.9.2",
    "sqlalchemy[asyncio]>=2.0.35",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
